[project]
name = "orbstack-mcp"
version = "0.1.0"
description = "MCP server for controlling OrbStack - Docker containers, Linux machines, and Kubernetes on macOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
orbstack-mcp = "orbstack_mcp.server:main"
